--- a/logica programacion/index.html
+++ b/logica programacion/index.html
@@ -7,17 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Programa caluclar</h1>
+    <h1>PROGRAMA PARA CALCULAR LOS  PUNTOS DE UN EQUIPO DE FUTBOL</h1>
 </body>
 <script>
     function saltarLinea(){
         document.write("<br><br><br>")
     }
 
-    function inprimirFrase(frase){
+    function imprimir(frase){
         document.write(frase)
         saltarLinea()
     }
+
+    var victorias = parseInt(prompt("Informe cantidad de victorias: "))
+    var empates = parseInt(prompt("Informe cantidad de empates: "))
+
+    var puntosTotal = victorias*3 + empates;
+
+   
+    imprimir("El total de puntos del equipo es: " + puntosTotal);
+    
+    if(puntosTotal > 28){
+       imprimir("El equipo esta mejor que el año pasado");
+    }
+
+    if(puntosTotal < 28){
+       imprimir("El equipo esta peor que el año pasado");
+    }
+    
+    if(puntosTotal == 28){
+    imprimir("El equipo esta igual que el año pasado");
+    }
+
 
 
 </script>
