--- a/Primera Pagina con Html y Css/index.html
+++ b/Primera Pagina con Html y Css/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,52 @@
     <title>Barberia Alura</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <h1>Sobre la Barbería Alura</h1>
-    <p>
-    Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong>  trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la 
-    Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
-    </p>
 
-    <p>
-    <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</strong></em>
-    </p>
+    <header>
+        <h1 class="titulo-principal">Barberia Alura</h1>
+    </header>
 
-    <p>
-    Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer 
-    a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de 
-    nuestros clientes. 
-    </p>
+    <img id="banner" src="banner/banner.jpg" alt="">
+
+    <div class="principal">
+        <h2 class="titulo-centralizado">Sobre la Barbería Alura</h2>
+        <p>
+            Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de
+            mejor para su cabello y barba. Fundada en 2020, la
+            Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.
+        </p>
+
+        <p id="mision">
+            <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros
+                    clientes".</strong></em>
+        </p>
+
+        <p>
+            Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el
+            mundo de la moda, para así ofrecer
+            a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad,
+            garantizando calidad y satisfacción de
+            nuestros clientes.
+        </p>
+
+    </div>
+
+    <div class="diferenciales">
+        <h3 class="titulo-centralizado" >Diferenciales</h3>
+        <!--Listas Desorganisadas class="items"-->
+        <ul>
+            <li class="items">Atencion personalisada a los clientes</li>
+            <li class="items">Espacio dferenciado</li>
+            <li class="items">Localizacion </li>
+            <li class="items">profesionales calificados</li>
+
+        </ul>
+
+        <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
+    </div>
+
 </body>
+
 </html>
