archivos html y css productos actualizados

--- a/Primera Pagina con Html y Css/productos.html
+++ b/Primera Pagina con Html y Css/productos.html
@@ -50,8 +50,8 @@
     </main>  
 
     <footer>
-        <img src="imagenes/logo-blanco.png" alt="">
-        <p>Copyrigth Barberia Alura 2023</p>
+        <img src="imagenes/logo-blanco.png">
+        <p class="copyright">&copy;Copyright Barberia Alura 2023</p>
 
     </footer>
 </body>
