--- a/Primera Pagina con Html y Css/productos.html
+++ b/Primera Pagina con Html y Css/productos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="productos.html">productos</a></li>
-                    <li><a href="contactos.html">Contactos</a></li>
+                    <li><a href="contacto.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
