actualizarcion de estilos

--- a/Primera Pagina con Html y Css/contacto.html
+++ b/Primera Pagina con Html y Css/contacto.html
@@ -24,7 +24,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="contacto">
         <form>
             <label for="nombreApellido">Nombre Y Apellido</label>
             <input type="text" id="nombreApellido" class="input-padron" required>
