--- a/Primera Pagina con Html y Css/index.html
+++ b/Primera Pagina con Html y Css/index.html
@@ -26,7 +26,7 @@
             </nav>
         </div>
     </header>
-    <img class="banner" src="banner/banner.jpg" alt="">
+    <img class="banner" src="banner/64240.jpg" alt="" height="70%">
 
     <main>
         <section class="principal">
