--- a/Primera Pagina con Html y Css/contacto.html
+++ b/Primera Pagina con Html y Css/contacto.html
@@ -24,8 +24,11 @@
             </nav>
         </div>
     </header>
+    <hr>
+    
     <main class="contacto">
         <form>
+            <h2 class="titulos-secundarios">DATOS DEL CLIENTE</h2>
             <label for="nombreApellido">Nombre Y Apellido</label>
             <input type="text" id="nombreApellido" class="input-padron" required>
 
