--- a/Primera Pagina con Html y Css/productos.html
+++ b/Primera Pagina con Html y Css/productos.html
@@ -26,23 +26,24 @@
         </div>
     </header>
     <main>
+        <hr>
         <ul class="productos">
             <li>
-                <h2>Cabello</h2>
+                <h2 class="titulos-secundarios">Cabello</h2>
                 <img src="imagenes/cabello.jpg">
                 <p class="producto-descripcion">Con tijera o maquina, a gusto del cliente</p>
                 <p class="producto-precio">$ 10.00</p>
             </li>
             <li>
-                <h2> Barba</h2>
+                <h2 class="titulos-secundarios"> Barba</h2>
                 <img src="imagenes/barba.jpg">
                 <p class="producto-descripcion">Corte y deseño profesional de barba</p>
                 <p class="producto-precio">$ 08.00</p>
             </li>
             <li>
-                <h2>Cabello + Barba</h2>
+                <h2 class="titulos-secundarios">Completo</h2>
                 <img src="imagenes/cabello+barba.jpg">
-                <p class="producto-descripcion">Pquete completo de cabello y barba</p>
+                <p class="producto-descripcion">Corte profesional cabello y barba</p>
                 <p class="producto-precio">$ 15.00</p>
             </li>
         </ul>
