--- a/1815-flexbox-posicione-elementos-en-la-pantalla-aula0/masFlex.html
+++ b/1815-flexbox-posicione-elementos-en-la-pantalla-aula0/masFlex.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Flex</title>
+    <link rel="stylesheet" href="css/masFlex.css">
 </head>
 <body>
-    <div class="flexContainer">
-      <div class=".flexItem primeraRow primeraRow "></div>  
+    <main class="flexContainer">
+      <div class="flexItem primeraRow primero"></div>  
       <div class="flexItem primeraRow"></div>
       <div class="flexItem primeraRow"></div>
       <div class="flexItem primeraRow"></div>
 
-    </div>
+    </main>
 </body>
 </html>
