actualizacion de estilos

--- a/1828-layouts-responsivos/index.html
+++ b/1828-layouts-responsivos/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <header class="head">
+    <header class="head container">
         <img head__logo  src="img/logo-apeperia.svg" alt="Logo de Apeperia">
             <nav class="head__navegacion">
                 <ul>
@@ -31,11 +31,11 @@
         </img>
     </header>
     <main>
-        <section class="llamada">
+        <section class="llamada container">
             <h1 class="llamada__titulo">Aplicaciones en la medida</h1>
             <p class="llamada__texto">Apeperia es una empresa emergente con una manera inovadora de comprar y crear aplicaciones móviles y web.
             </p>
-            <a class#"  href="">Conozca los planes</a>
+            <a class="llamada__boton boton"  href="">Conozca los planes</a>
         </section>
     </main>
 </body>
