--- a/1828-layouts-responsivos/index.html
+++ b/1828-layouts-responsivos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home | Apeperia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/head.css">
     <link rel="stylesheet" href="css/llamada.css">
     <link rel="stylesheet" href="css/bases.css">
+    <link rel="stylesheet" href="css/destacados.css">
     
 
 </head>
@@ -37,6 +38,20 @@
             </p>
             <a class="llamada__boton boton"  href="">Conozca los planes</a>
         </section>
+        <section class="destacados container">
+            <h2 class="destacados_titulo">Destacados</h2>
+            <a href="">
+                <figure class="destacados_panel">
+                    <img src="img/empezando-a-crear-logo.png" alt="Conozca las primeras etapas de la creación de un logotipo" class="destacados_panel-imagen">
+                    <figC class="destacados_panel-texto">Conozca las primeras etapas de la creación de un logotipo</figC>
+                </figure>
+            </a>
+            <a href="">
+                <figure class="destacados_panel">
+                    <img src="img/sugestiones-fotografias.png" alt="Painel de la publicación sobre consejos de fotografía" class="destacados_panel-imagen">
+                    <figC class="destacados_panel-texto">¿Trabajas con fotografía? Conozca esos consejos</figC>
+                </figure>
+            </a><a href="" class="destacados_boton boton">Recibir destacados por correo</a></section>
     </main>
 </body>
 </html>
