Anexando media queries

--- a/1828-layouts-responsivos/index.html
+++ b/1828-layouts-responsivos/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/sobre-nosotros.css">
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/institucional.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 
 
@@ -155,9 +156,9 @@
         </section>
 
         <section class="institucional container">
-            <h2 class="institucional_titulo">Institucional</h2>
-            <p class="institucional_descripcion">Un poco más sobre Apeperia</p>
-            <address class="institucional_direccion">
+            <h2 class="institucional__titulo">Institucional</h2>
+            <p class="institucional__descripcion">Un poco más sobre Apeperia</p>
+            <address class="institucional__direccion">
                 Calle Vergueiro, 3185 <br>
                 Villa Mariana, São Paulo
                 <article class="institucional__contacto">
@@ -176,18 +177,18 @@
         <footer class="footer__container">
             <img src="img/logo-apeperia.svg" alt="">
             <ul class="footer__social">
-                <li><a href="" class="footer__midia"></a>
-                <li><a href="" class="footer__midia"></a>
-                <li><a href="" class="footer__midia"></a>
+                <li><a href="" class="footer__midia"><img src="img/facebook.png" alt="Logo Facebook"> </a> </a>
+                <li><a href="" class="footer__midia"><img src="img/instagram.png" alt="Logo Instagram"> </a>
+                <li><a href="" class="footer__midia"><img src="img/twitter.png" alt="Logo twitter"> </a>
             </ul>
             <nav>
                 <ul class="footer__navegacion">
-                    <li class="footer__enlace"></li>
-                    <li class="footer__enlace"></li>
-                    <li class="footer__enlace"></li>
-                    <li class="footer__enlace"></li>
-                    <li class="footer__enlace"></li>
-                    <li class="footer__enlace"></li>
+                    <li class="footer__enlace"><a href="">Sobre</a></li>
+                    <li class="footer__enlace"><a href="">Planes</a></li>
+                    <li class="footer__enlace"><a href="">Blog</a></li>
+                    <li class="footer__enlace"><a href="">Destacados</a></li>
+                    <li class="footer__enlace"><a href="">Institucional</a></li>
+                    <li class="footer__enlace"><a href="">Contacto</a></li>
 
                 </ul>
             </nav>
