actualizando los css

--- a/1828-layouts-responsivos/index.html
+++ b/1828-layouts-responsivos/index.html
@@ -112,10 +112,12 @@
                 </ul>
                 <p class="sobre_nosotros__texto">Desarrollamos aplicaciones para todas plataformas</p>
             </div>
+            <img src="img/sobre-apeperia.png" alt="sobre nosotros" class="sobre_nosotros__imagen">
         </section>
         <section class="planes container">
             <h2 class="planes__titulo">Planes</h2>
             <ul class="planes__tarjetas">
+                
                 <li class="tarjetas tarjetas--start">
                     <h3 class="tarjetas__titulo">Start</h3>
                     <articule class="tarjetas__contenido">
@@ -129,7 +131,7 @@
                 <li class="tarjetas tarjetas--ultra">
                     <h3 class="tarjetas__titulo">Ultra</h3>
                     <articule class="tarjetas__contenido">
-                        <p class="tarjetas__precio"><em>$ 1500</em></p>
+                        <p class="tarjetas__precio"><em>$ 1000</em></p>
                         <p class="tarjetas__texto">20 manutenciones mensuales</p>
                         <p class="tarjetas__texto">App SEO</p>
                         <p class="tarjetas__texto">4 sistemas operacionales</p>
