--- a/1828-layouts-responsivos/index.html
+++ b/1828-layouts-responsivos/index.html
@@ -22,9 +22,6 @@
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/institucional.css">
     <link rel="stylesheet" href="css/footer.css">
-
-
-
 </head>
 
 <body>
@@ -117,7 +114,6 @@
         <section class="planes container">
             <h2 class="planes__titulo">Planes</h2>
             <ul class="planes__tarjetas">
-                
                 <li class="tarjetas tarjetas--start">
                     <h3 class="tarjetas__titulo">Start</h3>
                     <articule class="tarjetas__contenido">
@@ -131,20 +127,21 @@
                 <li class="tarjetas tarjetas--ultra">
                     <h3 class="tarjetas__titulo">Ultra</h3>
                     <articule class="tarjetas__contenido">
-                        <p class="tarjetas__precio"><em>$ 1000</em></p>
+                        <p class="tarjetas__precio"><em>$ 1500</em></p>
                         <p class="tarjetas__texto">20 manutenciones mensuales</p>
                         <p class="tarjetas__texto">App SEO</p>
                         <p class="tarjetas__texto">4 sistemas operacionales</p>
+                        <p class="tarjetas__texto">24h de atendimento</p>
                         <a href="#" class="tarjetas__boton tarjetas__boton--ultra boton">Asignar plan</a>
                     </articule>
                 </li>
                 <li class="tarjetas tarjetas--mega">
                     <h3 class="tarjetas__titulo">Mega</h3>
                     <articule class="tarjetas__contenido">
-                        <p class="tarjetas__precio"><em>$ 1500</em></p>
+                        <p class="tarjetas__precio"><em>$ 1000</em></p>
                         <p class="tarjetas__texto">10 manutenciones mensuales</p>
                         <p class="tarjetas__texto">App SEO</p>
-                        <p class="tarjetas__texto">2 sistemas operacionales</p>
+                        <p class="tarjetas__texto">2 sistemas operacional</p>
                         <a href="#" class="tarjetas__boton tarjetas__boton--mega boton">Asignar plan</a>
                     </articule>
                 </li>
@@ -159,25 +156,27 @@
 
         <section class="institucional container">
             <h2 class="institucional__titulo">Institucional</h2>
-            <p class="institucional__descripcion">Un poco más sobre Apeperia</p>
-            <address class="institucional__direccion">
-                Calle Vergueiro, 3185 <br>
-                Villa Mariana, São Paulo
-                <article class="institucional__contacto">
-                    <p>
-                        <a href="Tel:+55 11 55712751" class="institucional__contacto-telefono">+55 11 55712751</a>o
-                        <a href="contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>
-                    </p>
-
-                </article>
-            </address>
-
-            <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
-
+            <div class="institucional__contenido">
+                <div class="institucional__informaciones">
+                    <p class="institucional__descripcion">Un poco más sobre Apeperia</p>
+                    <address class="institucional__direccion">
+                        Calle Vergueiro, 3185 <br>
+                        Villa Mariana, São Paulo
+                        <article class="institucional__contacto">
+                            <p>
+                                <a href="Tel:+55 11 55712751" class="institucional__contacto-telefono">+55 11 55712751</a>o
+                                    
+                                <a href="contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>        
+                            </p>
+                        </article>
+                    </address>
+                </div>
+              <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
+            </div>
         </section>
 
-        <footer class="footer__container">
-            <img src="img/logo-apeperia.svg" alt="">
+        <footer class="footer container">
+            <img src="img/logo-apeperia.svg" alt="" class="footer__logo">
             <ul class="footer__social">
                 <li><a href="" class="footer__midia"><img src="img/facebook.png" alt="Logo Facebook"> </a> </a>
                 <li><a href="" class="footer__midia"><img src="img/instagram.png" alt="Logo Instagram"> </a>
@@ -194,10 +193,7 @@
 
                 </ul>
             </nav>
-
         </footer>
-
     </main>
 </body>
-
 </html>
