--- a/arquitectura-css-base-main/index.html
+++ b/arquitectura-css-base-main/index.html
@@ -19,6 +19,13 @@
     <link rel="stylesheet" href="/assets/css/sobre/sobre.css">
     <link rel="stylesheet" href="/assets/css/sobre/sobre-titulo.css">
     <link rel="stylesheet" href="/assets/css/sobre/sobre-descripcion.css">
+    <link rel="stylesheet" href="/assets/css/recetas.css">
+    <link rel="stylesheet" href="/assets/css/receta/receta-boton.css">
+    <link rel="stylesheet" href="/assets/css/receta/receta-contenido.css">
+    <link rel="stylesheet" href="/assets/css/receta/receta-descripcion.css">
+    <link rel="stylesheet" href="/assets/css/receta/receta-imagen.css">
+    <link rel="stylesheet" href="/assets/css/receta/receta-titulo.css">
+    <link rel="stylesheet" href="/assets/css/receta/receta.css">
     
 </head>
     <body>
